# product-fidelity-lab

./: .env.example  .gitignore  README.md  notes.md  pyproject.toml
data/benchmarks/: held_out_hero_front_straight.json  strict_hero_front_straight.json
data/calibration/: calibration_report.json  thresholds.json
data/golden/specs/: back_straight.json  (+13 more)
docs/: benchmark-protocol.md  case-study.md
docs/experiments/: 2026-03-24-label-edit-v1.md  2026-03-24-label-fidelity-v1.md  2026-03-25-strict-benchmark-v1.md
frontend/: index.html
scripts/: adapter_comparison.py  bootstrap_specs.py  prepare_golden.py  record_replay.py  run_calibration.py  run_heldout_edit.py  run_heldout_search.py  run_label_edit.py  run_live_test.py  run_perturbations.py  run_search.py  run_strict_baseline.py  run_strict_edit.py  smoke_test.py  smoke_test_full.py
src/product_fidelity_lab/: benchmark_protocol.py  config.py  main.py  search.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_aggregator.py  test_benchmark_protocol.py  test_calibration.py  test_cold_start.py  test_color.py  test_config.py  test_edit.py  test_fast_ranker.py  test_golden_spec.py  test_layer_afv.py  test_layer_brand.py  test_layer_depth.py  test_main.py  test_perturbation.py  test_preset_validation.py  test_product_eval.py  test_product_store.py  test_profile_confirm.py  test_prompts.py  test_provider.py  test_ranking_benchmark.py  test_render_request.py  test_render_trace.py  test_repair.py  test_result_cache.py  test_run_store.py  test_search.py  test_upload_response.py
(+49 files in other folders)
